src/css/style.less
/* You can add global styles to this file, and also import other style files */
body {
  background: #136a8a; /* fallback for old browsers */
  background: -webkit-linear-gradient(to left, #b3e6eb, #6281c9);
  background: linear-gradient(to left, #b3e6eb, #6281c9);
}

.no-padding {
  padding: 0 !important;
}

.no-margin {
  margin: 0 !important;
}

.white {
  color: white !important;
}

.strike-through {
  text-decoration: line-through;
}

textarea {
  width: 100%;
  max-width: 100%;
  min-height: 8em;
  max-height: 16em;
}

strong + small {
    display: block;
}

input[type=checkbox] {
  margin-right: 1em;
}

div.pull-right a {
  margin-left: 1em;
}

